<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DAC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="div">÷</string>
    <string name="mult">×</string>
    
    
    <string name="eq">=</string>
    <string name="clear">Clr</string>
    <string name="dot">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="DisplayText"/>
    <string name="delete">←</string>
    <color name="Background">#000000</color>
    <color name="ButtonColour">#595959</color>
    <color name="TextColor">#ffffff</color>
    <color name="DelClearColor">#ED611A</color>
    <color name="OpButCol">#393939</color>
    <dimen name="fontSize">30sp</dimen>
    <dimen name="opfontSize">40sp</dimen>
    <color name="OpTextColor">#ED611A</color>
    <color name="ButtonColorPressed">#6D9EB3</color>
    <color name="OpButColPressed">#6D9EB3</color>
    <color name="DelClearColorPressed">#6D9EB3</color>

</resources>
